@@ -10,6 +10,8 @@
 	
 		<!-- Generic properties -->
 		<java.version>1.6</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	
 		<!-- Spring -->
 		<spring-framework.version>4.1.6.RELEASE</spring-framework.version>
@@ -23,6 +25,7 @@
 		<!-- Webjars dependencies -->
 		<webjars-bootstrap.version>3.3.4</webjars-bootstrap.version>
 		<webjars-jquery.version>2.1.3</webjars-jquery.version>
+		<dandelion.version>0.10.1</dandelion.version>
 		
 		<!-- Logging -->
 		<logback.version>1.1.2</logback.version>
@@ -133,6 +136,17 @@
 		</dependency>		
 		<!-- e:Webjars (static dependencies distributed as JAR files) -->
 		
+		<!-- Dandelion -->
+		<dependency>
+			<groupId>com.github.dandelion</groupId>
+			<artifactId>datatables-jsp</artifactId>
+			<version>${dandelion.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.dandelion</groupId>
+			<artifactId>datatables-export-itext</artifactId>
+			<version>${dandelion.version}</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -144,6 +158,19 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<junitArtifactName>junit:junit</junitArtifactName>
+					<encoding>UTF-8</encoding>
+					<inputEncoding>${project.build.sourceEncoding}</inputEncoding>
+					<outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
+					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=${project.reporting.outputEncoding}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
